fix: static nav on mobile

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -406,6 +406,7 @@ img:not(.no-hover):hover {
 @media only screen and (max-device-width: 480px) {
   .nav {
     width: 90%;
+    position: static;
   }
 }
 
